# guineveer

./: .ci.yml  .gitignore  .gitmodules  Makefile  README.md  requirements.txt  topwrap.yaml
.github/workflows/: ci.yml
design/fpga/: Makefile  generate_project.sh  top.sv
design/src/: axi_cdc_wrapper.sv  gen_flist.sh  guineveer_sram.sv  rtl.mk  sram_wrapper.sv  uart_wrapper.sv  waivers.vlt
design/testbench/: defines.sv  guineveer_cocotb_dut.sv  guineveer_tb.sv
docs/: .gitignore  Makefile  memory_map_gen.py  requirements.txt  topwrap.yaml
docs/extensions/: draw_graph.py
docs/source/: conf.py  index.md  introduction.md  memory_map.csv  memory_map_dualcore.csv  memory_map_singlecore.csv  system_architecture.md  testing.md  user_guide.md
hw/: axi_cdc_wrapper.sv  gen_flist.sh  guineveer.sv  guineveer_sram.sv  waivers.vlt  wrapped_uart.sv
hw/interconnect_utils/: gen_inter_wrapper.sh  intercon_config.yaml
sw/: guineveer.repl  guineveer.resc  guineveer_axi-streaming-boot-dualcore.robot  guineveer_common.repl  guineveer_i3c.robot  guineveer_i3c_cosim.repl  guineveer_i3c_cosim.resc  guineveer_i3c_cosim.robot  guineveer_uart.robot
sw/renode_i3c_cosim/: Makefile  renode_i3c_cosim.sv
testbench/: guineveer_tb.sv
tests/cocotb/: Makefile  common.mk  pyproject.toml
tests/cocotb/i3c/: Makefile  guineveer_i3c_dut.sv  test_i3c.py  test_streaming_boot.py
tests/cocotb/streaming-boot-axi-dualcore/: Makefile  test_streaming_boot.py  util.py
tests/cocotb/streaming-boot-axi-twocore/: Makefile  guineveer_axi_streaming_boot_dut.sv  util.py
tests/cocotb/uart_core_ahb/: Makefile  test_uart_core_ahb.py  uart_top_wrapper.sv
tests/fpga/: Makefile  generate_project.sh  top.sv
tests/renode/: guineveer.repl  guineveer.resc  guineveer_common.repl  (+7 more)
topwrap/: design-dualcore.yaml  design-singlecore.yaml  design.yaml  design_soc.yaml  topwrap.yaml  topwrap_script.py
(+86 files in other folders)
